<resources>
    <string name="app_name">wishiu</string>
    <string name="hello">Привет, ___________ </string>
    <string name="hcomma">Привет, </string>
    <string name="default_name">Имя по умолчанию</string>
    <string name="nome">Ваше Имя</string>
    <string name="continuar">Продолжить</string>
    <string name="confirmar">Подтвердить</string>
    <string name="finish">Завершено</string>
    <string name="remover">Удалить</string>
    <string name="loading">Загрузка...</string>
    <string name="wishes">Желания</string>
    <string name="achieved">Достигнуто</string>
    <string name="scheduled">Запланировано</string>
    <string name="default_ptitle">Название по умолчанию</string>
    <string name="category">Категория</string>
    <string name="insert_t">Название продукта</string>
    <string name="insert_p">Цена</string>
    <string name="insert_ss">Начальная стоимость</string>
    <string name="pergunta1">У вас уже есть какие-либо сбережения?</string>
    <string name="default_pprice">0000</string>
    <string name="default_id">0</string>
    <string name="add_titulo">Добавить новый продукт</string>
    <string name="openb">Найти этот товар</string>
    <string name="default_percentage">50%</string>
    <string name="add_savings">+ Добавить сбережения</string>
    <string name="remove_savings">- Удалить сбережения</string>
    <string name="default_savings">Вы добавили 000 долларов к этим сбережениям.</string>
    <string name="default_date">ДД/ММ/ГГГГ</string>
    <string name="days_left">дней осталось</string>
    <string name="settings">Настройки</string>
    <string name="pergunta2">Как вас зовут?</string>
    <string name="setdate">Установить дату доставки</string>
    <string name="pergunta3">Укажите ожидаемую дату прибытия вашего продукта:</string>
    <string name="back_button_description">Назад</string>
    <string name="delete_button_description">Удалить</string>
    <string name="go_back">Назад</string>
    <string name="add_button">Добавить</string>
    <string name="settings_button">Настройки</string>
    <string name="viewpager_description">Проведите влево или вправо, чтобы переключаться между экранами</string>
    <string name="title">Название</string>
    <string name="price">Цена</string>
    <string name="starting_price">Первоначальная цена</string>

</resources>
