<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente"
    tools:context=".BemvindoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@drawable/rectangle"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/wishiu"
            android:layout_width="91dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/wishiu" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/settings"
            android:contentDescription="@string/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wishiu">

            <Button
                android:id="@+id/wishes"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="104dp"
                android:layout_height="48dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/selecao"
                android:padding="3dp"
                android:text="@string/wishes"
                android:textAllCaps="false"
                android:textColor="#FE815B"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/achieved"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="104dp"
                android:layout_height="48dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#FFF"
                android:padding="3dp"
                android:text="@string/achieved"
                android:textAllCaps="false"
                android:textColor="#707070"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/scheduled"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="104dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="#FFF"
                android:padding="3dp"
                android:text="@string/scheduled"
                android:textAllCaps="false"
                android:textColor="#707070"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewP"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.033"
            android:contentDescription="@string/viewpager_description"
        />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/adicionar"
                    android:layout_width="74dp"
                    android:layout_height="74dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/add_button"
                app:srcCompat="@drawable/mais" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
